<resources>
    <string name="service_domain">http://150.242.140.105:8006/metal/api/v1/</string>
    <string name="app_name">Smart Anchor</string>
    <string name="app_name_anchor">Smart Anchor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_network_gallery">NetworkGalleryActivity</string>
    <string name="title_activity_sd_card_gallery">SdCardGalleryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_logo">NEW LAUNCH</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="link"><a href="">Forget Password</a></string>
    <string-array name="nav_drawer_items">
        <item>Home</item>
        
        
        
        
        
        
        <item>View Nearest Customer</item>
        <item>View Nearest Electrician</item>
        <item>View Location In Map</item>
        
        <item>Order List</item>
        <item>Return Order List</item>
        <item>Schedule List</item>
        <item>Settings</item>
        <item>Contact Us</item>
        <item>About Metal</item>
        
        
        <item>Log Out</item>

    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="external_dir">GetSignature</string>
    <string name="title_activity_previous_order_new__s1">Previous_orderNew_S1</string>
    <string name="title_activity_previous_order_new__s2">Previous_orderNew_S2</string>
    <string name="title_activity_previous_order_new__s3">Previous_orderNew_S3</string>
    <string name="action_add_favourite">Sync</string>
    <string name="action_play_next">Delete</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="title_activity_sub_dealer__home">SubDealer_Home</string>
    <string name="title_activity_sub_dealer__detail1">SubDealer_Detail1</string>
    <string name="advertisement">Advertisement</string>
    <string name="new_launch">New Launch</string>
    <string name="Select_Language">Select Language</string>
    <string name="Please_Select_Language">Please Select Language</string>
    <string name="English">English</string>
    <string name="Hindi">हिन्दी</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="company_name">© 2014, Simple Logic IT Pvt. Ltd.</string>
    <string name="email_id_hint">Enter Email Id</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="OK_Button_label">OK</string>
    <string name="No_Button_label">No</string>
    <string name="Email_ID_validation_Toast">Please Enter Email Id</string>
    <string name="Server_Error">Some server error occurred. Please Contact IT team.</string>
    <string name="device_register_message">Your Device Already Register.</string>
    <string name="internet_connection_error">You don\'t have internet connection.</string>
    <string name="server_url_hint">Enter Server Url</string>
    <string name="server_url_dilog_title">If you want to change application server url, you have to clear app data, Press ok button for app setting page redirection.</string>
    <string name="url_validation_message">Enter url not a valid url.</string>
    <string name="url_athentication_check_messagen">Please wait, We are check your metal server authentication....</string>
    <string name="url_athentication_success_message">Your metal server authentication done successfully, Click Sign Up button for registration.</string>
    <string name="user_name_validation_message">Please Enter UserName</string>
    <string name="user_password_validation_message">Please Enter Password</string>
    <string name="device_not_found_message">Your Device id not found in database, Please register first.</string>
    <string name="server_continue_message">Do you want to continue with trackfieldsales.com ?</string>
    <string name="dialog_wait_message">Please wait Data Sync....</string>
    <string name="user_not_found_message">User not found, Please contact with it team.</string>
    <string name="Register_successfully_message">Register successfully.</string>
    <string name="first_sync_dialog_message">First Login of the day, Please wait for Data download...</string>
    <string name="password_not_match_message">Your Password doesnot match Please Try Again.</string>
    <string name="Credential_not_match_message">Your Credential doesnot match Please Try Again.</string>
    <string name="user_name_not_match_message">Your username doesnot match Please Try Again.</string>
    <string name="need_permission_message">Need Permissions</string>
    <string name="need_permission_setting_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="GOTO_SETTINGS">GOTO SETTINGS</string>
    <string name="Cancel">Cancel</string>
    <string name="please_wait_dialog_messagen">Please wait....</string>
    <string name="Error_occurredd">Error occurred!</string>
    <string name="VISIT_REPORT">VISIT REPORT</string>
    <string name="CALENDAR">CALENDAR</string>
    <string name="TARGET">TARGET</string>
    <string name="EXPENSES">EXPENSES</string>
    <string name="PRICE_AND_STOCK">PRICE AND STOCK</string>
    <string name="ADD_RETAILER">ADD RETAILER</string>
    <string name="MARKETING">MARKETING</string>
    <string name="SYNC">SYNC</string>
    <string name="customer_notfound_message">No customers found. Please try Sync or contact IT team</string>
    <string name="Menu">Menu</string>
    <string name="Attendance">Attendance</string>
    <string name="Nearest_Customer">Nearest Customer</string>
    <string name="Location_On_Map">Location On Map</string>
    <string name="Beat_On_Map">Beat On Map</string>
    <string name="Schedule_List">Schedule List</string>
    <string name="Outstanding">Outstanding</string>
    <string name="Order_List">Order List</string>
    <string name="Return_Order_List">Return Order List</string>
    <string name="Cash_Deposit">Cash Deposit</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="About_Metal">About Metal</string>
    <string name="Log_Out">Log Out</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Logout_warning_message">Are you sure you want to logout?</string>
    <string name="Yes">Yes</string>
    <string name="Target_dialog_message">Please wait Target Sync....</string>
    <string name="Last_Sync_On">Last Sync On</string>
    <string name="Total_Orders_Synced">Total Orders Synced</string>
    <string name="Check_Updates">Check Updates</string>
    <string name="Upload_Orders">Upload Orders</string>
    <string name="Upload_Data">Upload Data</string>
    <string name="Last_Sync_Date">Last Sync Date : </string>
    <string name="Last_Sync_Time">Last Sync Time  : </string>
    <string name="sync_data">sync data</string>
    <string name="Add_Item_Sounds">Add Item Sound</string>
    <string name="Browses">Browse</string>
    <string name="About">About</string>
    <string name="Simple_Logic">Simple Logic</string>
    <string name="Metal_Description">METAL facilitates the field sales organisation to interact with their respective offices in a structured and efficient manner. Thus automating the activities of the field sales using this android based field sales automation tool. This will help you to have better outlook of your targets and achievers at the same time have well coordinated field sales operation.</string>
    <string name="Simple_Logic_full_name">Simple Logic IT Private Ltd.</string>
    <string name="Simple_Logic_address">609, Damji Shamji Corporate Square,
Melville Estate, Next to KBC,
Ghatkopar Andheri Link Road,
Ghatkopar (E), Mumbai - 400 075.
INDIA.</string>
    <string name="Call_us">Call us :</string>
    <string name="Email_Us">Email Us :</string>
    <string name="Simplelogic_web_link">METAL by Simple Logic IT Pvt Ltd.</string>
    <string name="email1">sales@simplelogic.in</string>
    <string name="email2">support@simplelogic.in</string>
    <string name="Address">Address: </string>
    <string name="Contact_not_found">Contact detail not found.</string>
    <string name="Contact">Contact</string>
    <string name="Visit_our_websites">Visit our website</string>
    <string name="number1">+91 22 6511 6620</string>
    <string name="number2">+91 22 2500 6620</string>
    <string name="Retailer_Name">Retailer Name</string>
    <string name="Store_Name">Store Name</string>
    <string name="Addressn">Address</string>
    <string name="Street">Street</string>
    <string name="LandMark">LandMark</string>
    <string name="PIN">PIN</string>
    <string name="Contact_Mobile_Number">Contact Mobile Number</string>
    <string name="Contact_Email_ID">Contact Email ID</string>
    <string name="GSTIN">GSTIN</string>
    <string name="Save">Save</string>
    <string name="Enter_Retailer_Name">Please Enter Retailer Name</string>
    <string name="Enter_Store_Name">Please Enter Store Name</string>
    <string name="Enter_Address">Please Enter Address</string>
    <string name="Enter_Street">Please Enter Street</string>
    <string name="Enter_LandMark">Please Enter LandMark</string>
    <string name="select_beat">Please select beat</string>
    <string name="select_city">Please select city</string>
    <string name="select_state">Please select state</string>
    <string name="Enter_Pin">Please Enter Pin</string>
    <string name="Enter_Valid_Pin">Please Enter Valid Pin</string>
    <string name="Enter_Contact_Number">Please Enter Contact Number</string>
    <string name="Enter_Valid_Email_Address">Please Enter Valid Email Address</string>
    <string name="Enter_GSTIN_Number">Please Enter GSTIN Number</string>
    <string name="Enter_Valid_GSTIN_Number">Please Enter Valid GSTIN Number</string>
    <string name="Do_you_wish_to_continue">Do you wish to continue?</string>
    <string name="Select_City">Select City</string>
    <string name="Select_Beats">Select Beat</string>
    <string name="Submit">Submit</string>
    <string name="Select_Customer">Select Customer</string>
    <string name="Search_Subdealer">Search Subdealer</string>
    <string name="Search_Dealer">Search Dealer</string>
    <string name="Search_Variants">Search Variant</string>
    <string name="Select_Product">Select Product</string>
    <string name="Select_Categories">Select Category</string>
    <string name="MRP">MRP</string>
    <string name="Feedback">Feedback</string>
    <string name="Complaints">Complaints</string>
    <string name="Claims">Claims</string>
    <string name="Preview_Order">Preview Order</string>
    <string name="RP">RP</string>
    <string name="Please_Select_Product">Please Select Product</string>
    <string name="EQuantity">Quantity</string>
    <string name="Total_Price">Total Price : </string>
    <string name="Videos">Video</string>
    <string name="business_division">Select Business Division</string>
    <string name="select_bu">Select BU</string>
    <string name="select_product_spec">Select Product Specification</string>
    <string name="scheme">Scheme</string>
    <string name="delivery_qty">Delivery Quantity</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="stock">Stock</string>
    <string name="select_retailer">Select Retailer</string>
    <string name="image">Image</string>
</resources>