<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >



    <Button
        android:id="@+id/button1"
        android:background="#545454"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/Videos"
        android:textColor="#ffffff"/>
    
    <Button
        android:id="@+id/button2"
        android:layout_marginTop="5dp"
        android:background="#545454"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/stock"
        android:textColor="#ffffff"/>
    
    <Button
        android:id="@+id/button3"
        android:layout_marginTop="5dp"
        android:background="#545454"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:text="@string/image"
        android:textColor="#ffffff"/>
    
    <Button
        android:id="@+id/button4"
        android:layout_marginTop="5dp"
        android:background="#545454"
        android:layout_marginLeft="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Feedback"
        android:textColor="#ffffff"/>
    
    <Button
         android:id="@+id/button5"
         android:background="#545454"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="200dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Claims"
         android:textColor="#ffffff"/>
    
    <Button
         android:id="@+id/button6"
         android:background="#545454"
         android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="200dp"
         android:text="@string/Complaints"
         android:textColor="#ffffff"/>
    
    
 
</LinearLayout>
