<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/containerNewOrder"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtWelcomeUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:layout_alignParentTop="true"
        android:textColor="#FFFFFF"
        android:background="#BDBDBD"
        android:gravity="center"
        android:textSize="15sp"  >
    </TextView>

    <AutoCompleteTextView
        android:id="@+id/Product_Variant_search"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="4dp"
        android:completionThreshold="1"
        android:layout_centerHorizontal="true"
        android:imeOptions="actionDone"
        android:ems="10"
        android:singleLine="true"
        android:textSize="15dp"
        android:layout_below="@+id/txtWelcomeUser"
        android:drawableRight="@drawable/search_icon"
        android:hint="@string/Search_Variants" >
        <requestFocus />
    </AutoCompleteTextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/spinner_recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_below="@+id/Product_Variant_search"
        android:layout_above="@+id/list_ok"
        android:scrollbars="vertical" />

    <Spinner
        android:id="@+id/spnBu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/Product_Variant_search"
        android:layout_centerHorizontal="true"
        android:hint="@string/select_bu"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:paddingTop="10dp" >
    </Spinner>

    <Spinner
        android:id="@+id/spnBusinessDiv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/spnBu"
        android:layout_centerHorizontal="true"
        android:hint="@string/business_division"
        android:inputType="textPassword"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/spnBusinessDiv"
        android:layout_centerHorizontal="true"
        android:hint="@string/Select_Categories"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:paddingTop="10dp" >
    </Spinner>

    <Spinner
        android:id="@+id/spnProduct"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/spnCategory"
        android:layout_centerHorizontal="true"
        android:hint="@string/Please_Select_Product"
        android:inputType="textPassword"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spnProductSpec"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:hint="@string/select_product_spec"
        android:inputType="textPassword"
        android:paddingTop="10dp" />


    <AutoCompleteTextView
        android:id="@+id/Product_Variant"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:completionThreshold="1"
        android:imeOptions="actionDone"
        android:ems="10"
        android:layout_below="@+id/spnProduct"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:singleLine="true"
        android:textSize="15dp"
        android:drawableRight="@drawable/search_icon"
        android:hint="@string/Search_Variants" >
        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >

        <TextView
            android:id="@+id/textRP"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#414042"
            android:text="@string/RP"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/editTextRP"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#414042"
            android:text="@string/MRP"
            android:gravity="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/editTextMRP"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextQuantity1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:maxLength="9"
        android:visibility="gone"
        android:hint="@string/EQuantity"
        android:inputType="number"
        android:paddingTop="10dp" >
    </EditText>

    <Spinner
        android:id="@+id/spnScheme1"
        android:visibility="gone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/scheme"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/txtDeleiveryQuantity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/delivery_qty"
        android:paddingTop="10dp"
        android:visibility="gone"
        android:textSize="17dp">
    </EditText>


    <TextView
        android:id="@+id/txtPrice1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Total_Price"
        android:paddingTop="10dp"
        android:visibility="gone"
        android:textSize="17dp" >
    </TextView>

    <Button
        android:id="@+id/list_ok"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonAddMOre"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonPreviewOrder"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Preview_Order"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
